# sapin

./: .gitignore  .prettierignore  README.md  bun.lockb  index.html  package.json  prettier.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  Overlay.svelte  draw.ts  log.ts  main.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  error.rs  event.rs  log.rs  main.rs  tray.rs  util.rs  window.rs
src-tauri/src/cmd/: log.rs  mod.rs
src-tauri/src/config/: app_config.rs  config.rs  config_file.rs  mod.rs
