[package]
name = "sapin"
version = "0.1.1"
description = "Simple crosshair overlay"
authors = ["pierre <dommerc.pierre@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0-rc"
tokio = { version = "1.39", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.86"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", features = [
    "tracing-log",
    "env-filter",
] }
strum = { version = "0.26", features = ["derive"] }
toml = "0.8.2"
notify = { version = "6.1.1", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
